# hackathon2-phase-1

./: README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
docs/: menu-ux.md
history/prompts/1-console-todo-app/: 2-console-todo-app-spec.spec.prompt.md  3-todo-app-plan.plan.prompt.md  4-todo-app-tasks.tasks.prompt.md  5-todo-app-implementation.green.prompt.md
history/prompts/2-menu-ux-update/: 6-menu-ux-spec.spec.prompt.md  7-menu-ux-plan.plan.prompt.md  8-menu-ux-tasks.tasks.prompt.md  9-menu-ux-implementation.green.prompt.md
history/prompts/constitution/: 1-create-todo-app-constitution.constitution.prompt.md
specs/1-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-console-todo-app/checklists/: requirements.md
specs/1-console-todo-app/contracts/: cli-commands.md
specs/2-menu-ux-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-menu-ux-update/checklists/: requirements.md
specs/2-menu-ux-update/contracts/: menu-interface.md
src/cli/: todo_app.py
src/models/: todo.py
src/services/: todo_service.py
src/state/: memory_store.py
tests/unit/: test_todo.py
